--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.26)
-project(tetrisgame)
+project(newtet)
 
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(tetrisgame main.cpp)
+
+target_link_libraries(tetrisgame PRIVATE ncurses)
