final commit, added a readme message and added a --help function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,5 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(tetrisgame main.cpp)
 target_link_libraries(tetrisgame PRIVATE ncurses)
 
-# Pridani souboru s testy
+# Pridani složky s testy
 add_subdirectory(tests)
